--- a/vues/Formulaire.form
+++ b/vues/Formulaire.form
@@ -28,6 +28,7 @@
         </constraints>
         <properties>
           <background color="-3684409"/>
+          <text value="Revenir à l'accueil"/>
         </properties>
       </component>
       <grid id="c02b6" binding="nomDesChamps" layout-manager="GridLayoutManager" row-count="11" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
