--- a/vues/Formulaire.form
+++ b/vues/Formulaire.form
@@ -327,6 +327,14 @@
           </component>
         </children>
       </grid>
+      <component id="66662" class="javax.swing.JCheckBox" binding="checkBox1" default-binding="true">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="CheckBox"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
